Add Additional Mod Implementations and Jars