@@ -5,53 +5,56 @@ plugins {
 }
 
 tasks.named('wrapper', Wrapper).configure {
-    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
-    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
-    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
-    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
-    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
     distributionType = Wrapper.DistributionType.BIN
 }
+
+
+
+
 
 version = mod_version
 group = mod_group_id
 
 repositories {
-    // Add here additional repositories if required by some of the dependencies below.
+    flatDir {
+        dirs "libs"
+    }
+    maven {
+        // JEI
+        name = "Progwml6 maven"
+        url = "https://dvs1.progwml6.com/files/maven/"
+    }
+    maven {
+        // CraftTweaker
+        name = "BlameJared"
+        url = "https://maven.blamejared.com"
+    }
+    maven { url "https://maven.ryanliptak.com/" }
+
+    maven {
+        name = "curse.maven"
+        url = "https://cursemaven.com"
+    }
 }
 
 base {
     archivesName = mod_id
 }
 
-// Mojang ships Java 21 to end users in 1.21.1, so mods should target Java 21.
 java.toolchain.languageVersion = JavaLanguageVersion.of(21)
 
-//minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')
-//minecraft.accessTransformers.entry public net.minecraft.client.Minecraft textureManager # textureManager
-
-// Default run configurations.
-// These can be tweaked, removed, or duplicated as needed.
 runs {
-    // applies to all the run configs below
     configureEach {
-        // Recommended logging data for a userdev environment
-        // The markers can be added/remove as needed separated by commas.
-        // "SCAN": For mods scan.
-        // "REGISTRIES": For firing of registry events.
-        // "REGISTRYDUMP": For getting the contents of all registries.
         systemProperty 'forge.logging.markers', 'REGISTRIES'
-
-        // Recommended logging level for the console
-        // You can set various levels here.
-        // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
         systemProperty 'forge.logging.console.level', 'debug'
 
         modSource project.sourceSets.main
+
+        jvmArgument '--add-modules=jdk.incubator.vector'
+        jvmArgument '--enable-preview'
     }
 
     client {
-        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
         systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
     }
 
@@ -60,69 +63,288 @@ runs {
         argument '--nogui'
     }
 
-    // This run config launches GameTestServer and runs all registered gametests, then exits.
-    // By default, the server will crash when no gametests are provided.
-    // The gametest system is also enabled by default for other run configs under the /test command.
     gameTestServer {
         systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
     }
 
     data {
-        // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
-        // workingDirectory project.file('run-data')
 
-        // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
         arguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
     }
 }
 
-// Include resources generated by data generators.
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
-// Sets up a dependency configuration called 'localRuntime'.
-// This configuration should be used instead of 'runtimeOnly' to declare
-// a dependency that will be present for runtime testing but that is
-// "optional", meaning it will not be pulled by dependents of this mod.
 configurations {
     runtimeClasspath.extendsFrom localRuntime
 }
 
 dependencies {
-    // Specify the version of Minecraft to use.
-    // Depending on the plugin applied there are several options. We will assume you applied the userdev plugin as shown above.
-    // The group for userdev is net.neoforged, the module name is neoforge, and the version is the same as the neoforge version.
-    // You can however also use the vanilla plugin (net.neoforged.gradle.vanilla) to use a version of Minecraft without the neoforge loader.
-    // And its provides the option to then use net.minecraft as the group, and one of; client, server or joined as the module name, plus the game version as version.
-    // For all intends and purposes: You can treat this dependency as if it is a normal library you would use.
+    // NeoForge
     implementation "net.neoforged:neoforge:${neo_version}"
 
-    // Example optional mod dependency with JEI
-    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
-    // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
-    // compileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
-    // We add the full version to localRuntime, not runtimeOnly, so that we do not publish a dependency on it
-    // localRuntime "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"
+    // JEI
+    compileOnly "mezz.jei:jei-${jei_minecraft}-common-api:${jei_version}"
+    compileOnly "mezz.jei:jei-${jei_minecraft}-neoforge-api:${jei_version}"
+    localRuntime "mezz.jei:jei-${jei_minecraft}-neoforge:${jei_version}"
 
-    // Example mod dependency using a mod jar from ./libs with a flat dir repository
-    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
-    // The group id is ignored when searching -- in this case, it is "blank"
-    // implementation "blank:coolmod-${mc_version}:${coolmod_version}"
+    // AppleSkin
+    compileOnly "squeek.appleskin:appleskin-neoforge:${appleskin_version}:api"
+    runtimeOnly "squeek.appleskin:appleskin-neoforge:${appleskin_version}"
 
-    // Example mod dependency using a file as dependency
-    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")
+    // CraftTweaker
+    def ctDep = "com.blamejared.crafttweaker:CraftTweaker-neoforge-${crafttweaker_minecraft}:${crafttweaker_version}"
+    compileOnly ctDep
+    runtimeOnly ctDep
 
-    // Example project dependency using a sister or child project:
-    // implementation project(":myproject")
 
-    // For more info:
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+    // Undead Nights and Celestials
+    implementation "blank:UndeadNights-0.9.5-NeoForge-mc1.21"
+    implementation "curse.maven:BetterDays-895618:5877557"
+    implementation "blank:Enhanced-Celestials-NeoForge-6.0.2.0"
+    implementation "curse.maven:corgilib-693313:6002859" //enhanced celestials dependency
+    implementation "curse.maven:dataanchor-1203668:6466645" //enhanced celestials dependency
+
+    // KUBEJS
+    // "curse.maven:kubeJS-238086:5810100"
+    implementation "blank:kubejs-neoforge-2101.7.1"
+    implementation "curse.maven:architecturyAPI-419699:5786327"
+    implementation "curse.maven:rhinoAPI-416294:6184623"
+    implementation "curse.maven:kubeJSLootJS-570630:6792267"
+
+    //J ADE
+    implementation "curse.maven:jade-324717:6011258"
+    implementation "curse.maven:jadeAddOns-583345:5829251"
+
+    // The Delights
+    implementation "curse.maven:FarmersDelight-398521:6597295"
+    implementation "blank:extradelight-2.4.2"
+    implementation "curse.maven:MyNethersDelight-1003673:6460371"
+    implementation "curse.maven:BrewinAndChewin-637808:6445492"
+    implementation "curse.maven:Butchercraft-265715:6058964"
+
+
+    // Croptopia
+    implementation ('curse.maven:EpheroLib-885449:5872111')
+    implementation ("vazkii.patchouli:Patchouli:1.21-87-NEOFORGE")
+    //implementation ('curse.maven:Croptopia-415438:6092073')
+    implementation "blank:croptopia_1.21.1_NEO-FORGE-4.1.0"
+
+
+    //---- PERFORMANCE ----//
+    implementation "curse.maven:ferriteCore-429235:5850121"
+    implementation "curse.maven:betterChunkLoading-899487:6005149"
+    implementation "curse.maven:cupboard-326652:5570763" //betterChunkLoading dependency
+    implementation "curse.maven:clumps-256717:5623731"
+    implementation "curse.maven:getItTogetherDrops-411045:5575483"
+    implementation "curse.maven:immediatelyFast-686911:5959911"
+    implementation "curse.maven:Embeddium-908741:5681729"
+    implementation "curse.maven:EmbeddiumExtras-558905:6041699"
+    implementation "curse.maven:EmbeddiumDynamicLights-551736:6044477"
+    implementation "curse.maven:chunky-485681:5437053"
+    // https://www.curseforge.com/minecraft/mc-mods/chunky-pregenerator-forge
+    implementation "curse.maven:badOptimizations-949555:5961419"
+    implementation "blank:entityculling-1.7.2-1.21"
+    //---- END PERFORMANCE ----//
+
+
+
+    // FTB
+    implementation "curse.maven:FTBLibrary-404465:6016745"
+    implementation "curse.maven:FTBChunks-314906:5968500"
+    implementation "curse.maven:FTBTeams-404468:5882217"
+    implementation "curse.maven:FTBXMod-889915:6048646"
+    implementation "curse.maven:FTBQuests-289412:5882270"
+    // JourneyMap
+    implementation "curse.maven:journeyMap-32274:6689206"
+    implementation "curse.maven:journeyMapIntegration-525447:6508946"
+
+    // Generic Dependencies
+    implementation "curse.maven:geckolib-388172:6659026"
+    implementation "curse.maven:balm-531761:6447094"
+    implementation "curse.maven:resourcefulconfig-714059:5808466" //betterarcnheology
+    implementation "curse.maven:placebo-283644:6068449" //apotheosis
+    implementation "curse.maven:apothicEnchanting-1063926:6084297" //apotheosis
+    implementation "curse.maven:playeranimator-658587:6024462" //irons spellbooks
+    implementation "curse.maven:prism-638111:5625115" //legendary tooltip
+    implementation "curse.maven:bookshelf-228525:6079580" //attribute fix
+    implementation "curse.maven:clothConfig-348521:5729127" //artifacts
+    implementation "curse.maven:resourcefulLib-570073:5793500" //chipped
+    implementation "curse.maven:apothicSpawners-986583:6058055" //apotheosis
+    implementation "curse.maven:mysteriousmountainlib-368098:5852852" //cornDelight
+    implementation "curse.maven:modonomicon-538392:6065157" //occultism
+    implementation "curse.maven:athena-841890:5629395" //chipped
+    implementation "curse.maven:cobweb-968456:6089542" //harvestWithEase
+    implementation "curse.maven:cyclopscore-232758:6059640" //evilcraft
+    implementation "curse.maven:puzzleslib-495476:6078016" //cutthrough
+    implementation "curse.maven:iceberg-520110:5804224"
+    implementation "curse.maven:smartBrainLib-661293:6035663"
+    implementation "curse.maven:titanium-287342:5897690"
+    implementation "curse.maven:McJtyLib-233105:6362246"
+    //implementation "curse.maven:theOneProbe-245211:5836106"
+    implementation "curse.maven:guideme-1173950:6688687" //ae2
+    implementation "curse.maven:silentLib-242998:6040692" //silentgear
+
+
+    //---- QOL ----//
+    implementation "curse.maven:waystones-245755:6552633"
+    implementation "curse.maven:crashUtilities-371813:5993450"
+    implementation "curse.maven:legendaryToolTips-532127:5591027"
+    implementation "curse.maven:searchables-858542:5831692"
+    implementation "curse.maven:clickableAdvancements-511733:5551404"
+    implementation "curse.maven:noChatReports-634062:5885735"
+    implementation "curse.maven:AIimprovements-233019:5426792"
+    implementation "curse.maven:fastLeafDecay-230976:5849090"
+    implementation "curse.maven:toastControl-271740:5530706"
+    implementation "curse.maven:CutThrough-969423:5731913"
+    implementation "curse.maven:logProtection-358304:5559306"
+    implementation "curse.maven:noTrample-914018:5881107"
+    implementation "curse.maven:fuelGoesHere-659090:6003423"
+    implementation "curse.maven:harvestWithEase-602171:5968872"
+    implementation "curse.maven:mouseTweaks-60089:5637846"
+    implementation "curse.maven:polymorph-388800:5995380"
+    implementation "curse.maven:fastWorkbench-288885:5670423"
+    implementation "curse.maven:FTBUltimine-386134:5671703"
+    implementation "curse.maven:appleSkin-248787:5586600"
+    implementation "blank:novillagerdm-1.21.1-6.0.0"
+    implementation "curse.maven:inventoryEssentials-368825:5623542"
+    implementation "curse.maven:commonCapabilities-247007:6059616"
+    implementation "blank:moreoverlays-1.23.2-mc1.21-neoforge"
+    implementation "curse.maven:improvedSignEditing-952629:5609614"
+    implementation "curse.maven:collectiveLib-342584:5840217" //improvedSignEditing dependency
+    implementation "curse.maven:experimentalWarning-1009556:5609644"
+    implementation "curse.maven:craftingTweaks-233071:6023041"
+    implementation "curse.maven:controlling-250398:6368976"
+
+
+
+
+
+
+
+    //RF Tools
+    implementation "curse.maven:rfToolsBase-326041:6362247"
+    implementation "curse.maven:rfToolsPower-290209:6310518"
+    implementation "curse.maven:rfToolsUtility-342466:6362249"
+
+    //Create
+    implementation "curse.maven:create-328085:6323264"
+    implementation "curse.maven:createCraftsAndAdditions-439890:6445614"
+
+
+    // BIOM GENERATION
+    implementation "curse.maven:terralith-513688:6090387"
+    implementation "curse.maven:tectonic-686836:6596485"
+    implementation "curse.maven:terraBlender-940057:6054947"
+    implementation "curse.maven:biomsOPlenty-220318:6501142"
+    implementation "curse.maven:glitchCore-955399:5660740" //dependency: biomsOPlenty
+    implementation "curse.maven:incendium-591388:5962249"
+    implementation "curse.maven:nullscape-570354:6402757"
+
+    // DUNGEONS
+    implementation "curse.maven:DungeonCrawl-324973:6047162"
+    implementation "curse.maven:WhenDungeonsArise-442508:6078710"
+    implementation "curse.maven:WhenDungeonsAriseSevenSeas-953637:5661269"
+
+    // Structures
+    implementation "curse.maven:Valhelsia-347488:6360484"
+    implementation "curse.maven:Valhelsia-416935:6296775" //dependency
+
+
+
+    implementation "curse.maven:lithostitched-936015:6201869" //tectonics dependency
+    // BIOM GENERATION END
+
+    implementation "curse.maven:VicsPointBlank-961053:6028992"
+    implementation "curse.maven:ImmersiveEngineering-231951:5828000"
+    implementation "curse.maven:ironSpells-855414:6054197"
+    implementation "curse.maven:silentGear-297039:6070229"
+    implementation "curse.maven:lootr-361276:6085253"
+
+    implementation "curse.maven:securityCraft-64760:5950155"
+    implementation "curse.maven:occultism-361026:6082790"
+    implementation "curse.maven:theurgy-430636:5920165"
+    implementation "curse.maven:productiveBees-377897:6029033"
+    implementation "curse.maven:industrialForegoing-266515:6030556"
+    implementation "curse.maven:evilCraft-74610:6079207"
+    implementation "curse.maven:powah-633483:6483151"
+
+    implementation "curse.maven:curios-309927:6076118"
+
+    implementation "curse.maven:apotheosis-313970:6078226"
+    implementation "curse.maven:apothicAttributes-898963:6060907"
+    implementation "curse.maven:attributeFix-280510:5824104"
+    implementation "curse.maven:prickle-1023259:6546240" //attribute fix
+    implementation "curse.maven:maxHealthFix-492246:5824111"
+
+    implementation "curse.maven:aquaCulture2-60028:5919626"
+    implementation "curse.maven:corailTombstone-243707:6052769"
+    implementation "curse.maven:structureCompass-319598:5774341"
+    implementation "curse.maven:natureCompass-252848:5696042"
+    implementation "curse.maven:SophisticatedCore-618298:6074769"
+    implementation "curse.maven:SophisticatedStorage-619320:6080617"
+    implementation "curse.maven:SophisticatedBackpacks-422301:6083475"
+
+    implementation "curse.maven:craftingOnAStick-577850:6455815"
+    implementation "curse.maven:colorfulHearts-854213:5746319"
+    implementation "curse.maven:trashSlot-235577:6077668"
+    implementation "curse.maven:artifacts-312353:5624722"
+    implementation "curse.maven:chipped-456956:5813117"
+
+    //Applied Energistics 2
+    implementation "curse.maven:AppliedEnergistics2-223794:6626602"
+    implementation "curse.maven:polymorphEnergistics-941096:5545923"
+    implementation "curse.maven:arsEnergistique-905641:6203425"
+    implementation "curse.maven:appliedMekanistics-574300:5978711"
+    implementation "curse.maven:appliedKinetics-867328:6628384"
+    //implementation "curse.maven:appliedBotanics-610632:4904185"
+    implementation "curse.maven:ae2QoLRecipes-907026:6174070"
+    implementation "curse.maven:ae2inserExportCard-982512:5577253"
+    implementation "curse.maven:meRequester-688367:6436029"
+    implementation "curse.maven:appliedEnergistics2WirelessTerminal-459929:6437277"
+    implementation "curse.maven:aeInfinityBooster-559313:6482267"
+    implementation "curse.maven:megaCells-622112:6633684"
+    //---- END Applied Energistics 2 ----//
+
+
+    //---- Ars Nouveau ----//
+    implementation "curse.maven:arsNouveau-401955:6758174"
+    implementation "curse.maven:arsAdditions-974408:6392486"
+    implementation "curse.maven:arsElemental-561470:6701129"
+    implementation "curse.maven:arsOcultas-907843:6015723"
+    implementation "curse.maven:arsCreo-575698:6279953"
+    //---- END Ars Nouveau ----//
+
+
+
+
+    implementation "curse.maven:timekeeperCalendars-1185099:6432257"
+    implementation "curse.maven:mobgrindingutils-254241:6588170"
+    implementation "curse.maven:betterArcheology-835687:6423649"
+
+
+
+    //---- Mystical Agriculture ----//
+    implementation "curse.maven:mysticalAgriculture-246640:6714864"
+    implementation "curse.maven:mysticalAgricultureTieredCrystals-299045:5863210"
+    implementation "curse.maven:mysticalAgraditions-256247:6503449"
+    implementation "curse.maven:mysticalCustomization-280441:5651037"
+    // https://www.curseforge.com/minecraft/mc-mods/mystical-customization
+    implementation "curse.maven:cucumberLib-272335:6714785" //mysticalAgriculture dependency
+
+    //---- END Mystical Agriculture ----//
+
+
+    implementation "blank:Mekanism-1.21.1-10.7.14.homebaked"
+    implementation "blank:MekanismAdditions-1.21.1-10.7.14.homebaked"
+    implementation "blank:MekanismGenerators-1.21.1-10.7.14.homebaked"
+    implementation "blank:MekanismTools-1.21.1-10.7.14.homebaked"
+
+
 }
 
-// This block of code expands all declared replace properties in the specified resource targets.
-// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
-// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
-// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
+
+
 tasks.withType(ProcessResources).configureEach {
     var replaceProperties = [
             minecraft_version      : minecraft_version,
@@ -143,7 +365,6 @@ tasks.withType(ProcessResources).configureEach {
     }
 }
 
-// Example configuration to allow publishing using the maven-publish plugin
 publishing {
     publications {
         register('mavenJava', MavenPublication) {
@@ -161,7 +382,6 @@ tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
 
-// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
 idea {
     module {
         downloadSources = true
